--- a/dist.ini
+++ b/dist.ini
@@ -2,9 +2,46 @@ name    = MooseX-amine
 author  = John SJ Anderson <genehack@genehack.org>
 license = Perl_5
 copyright_holder = John SJ Anderson
-copyright_year   = 2011
+copyright_year   = 2014
 
-[@GENEHACK]
+[GatherDir]
+exclude_match    = ^release.*
+exclude_filename = dist.ini
 
+[@Filter]
+-bundle = @Basic
+-remove = GatherDir
+-remove = Readme
+
+[Git::NextVersion]
+first_version = 0.3
+
+[AutoPrereqs]
 [Prereqs]
 Moose = 2.000
+[GithubMeta]
+homepage = http://genehack.github.com/moosex-amine
+user = genehack
+issues = 1
+[InstallGuide]
+[MetaConfig]
+[MetaJSON]
+[NextRelease]
+[PkgVersion]
+[PodSyntaxTests]
+[PodCoverageTests]
+[PodWeaver]
+[ReadmeMarkdownFromPod]
+filename = README.md
+[CopyFilesFromBuild]
+copy = README.md
+[Git::Tag]
+[Git::Commit]
+[Twitter]
+
+[Run::BeforeBuild]
+run = rm -f Makefile.PL
+
+[Run::AfterBuild]
+run = cp %d/Makefile.PL ./
+run = git status --porcelain | grep "M Makefile.PL" && git commit -m "auto-committed by dist.ini" Makefile.PL || echo Makefile.PL up to date
