Amendments to improve Kwalitee
Add Changes file
Include full test prereqs in dist.ini
Add provides in META.yml via dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,11 @@ first_version = 0.3
 [AutoPrereqs]
 [Prereqs]
 Moose = 2.000
+[Prereqs / TestRequires]
+Pod::Coverage::TrustPod  = 0
+Test::Pod                = 1.41
+Test::Pod::Coverage      = 1.08
+
 [GithubMeta]
 homepage = http://genehack.github.com/moosex-amine
 user = genehack
@@ -26,6 +31,7 @@ issues = 1
 [InstallGuide]
 [MetaConfig]
 [MetaJSON]
+[MetaProvides::Package]
 [NextRelease]
 [PkgVersion]
 [PodSyntaxTests]
