Update author and copyright

--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,8 @@
 name    = MooseX-amine
-author  = John SJ Anderson <genehack@genehack.org>
+author  = John SJ Anderson <john@genehack.org>
 license = Perl_5
 copyright_holder = John SJ Anderson
-copyright_year   = 2014
+copyright_year   = 2020
 
 [GatherDir]
 exclude_match    = ^release.*
