Update repo metadata

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,13 @@ license = Perl_5
 copyright_holder = John SJ Anderson
 copyright_year   = 2020
 
+[MetaResources]
+homepage        = https://git.genehack.net/genehack/moosex-amine
+bugtracker.web  = https://git.genehack.net/genehack/moosex-amine
+repository.url  = https://git.genehack.net/genehack/moosex-amine
+repository.web  = https://git.genehack.net/genehack/moosex-amine
+repository.type = git
+
 [GatherDir]
 exclude_match    = ^release.*
 exclude_filename = dist.ini
@@ -24,10 +31,6 @@ Pod::Coverage::TrustPod  = 0
 Test::Pod                = 1.41
 Test::Pod::Coverage      = 1.08
 
-[GithubMeta]
-homepage = http://genehack.github.com/moosex-amine
-user = genehack
-issues = 1
 [InstallGuide]
 [MetaConfig]
 [MetaJSON]
